# gs

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: gaussian_discriminator.yaml
configs/dataset/: nuscene_novel_view.yaml
configs/gaussian_encoder/: noposplat.yaml
configs/noposplat/decoder/: splatting_cuda.yaml
configs/noposplat/encoder/: noposplat.yaml
configs/pipeline/: gaussian_discriminator_pipeline.yaml
configs/renderer/: gaussian_renderer.yaml
gspipline/config/: experiment.py  splatfacto_discriminator_config.py
gspipline/dataset/: base_dataset.py  data_module.py  nuscene.py  nuscene_novel_view.py  utils.py
gspipline/pipeline/: gaussian_discriminator.py  mixins.py  pipeline_mixins.py
gspipline/renderer/: base_render.py  gaussian_splatting_render.py  point_cloud_render.py
gspipline/scripts/: gaussian_discriminator_trainer.py  point_cloud_render.py  segment_viewer.py  track_viewer.py
gspipline/viewer/: render_panel.py  segment_viewer.py  track_viewer.py
tests/: test_dinov2.py  test_gaussian_discriminator.py  test_gaussian_discriminator2.py  test_gaussian_discriminator_pipline.py  test_nuscenedataset.py
