[tool.poetry]
name = "gspipline"
version = "0.1.0"
description = ""
authors = ["me"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."nerfstudio.method_configs"]
splatfacto_discriminator = "gspipline.config.splatfacto_discriminator_config:splatfacto_discriminator"
splatfacto_big_discriminator = "gspipline.config.splatfacto_discriminator_config:splatfacto_big_discriminator"